k8/backend-nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-nodeport-service
spec:
  type: NodePort  # Change the service type to NodePort
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 8080        # Expose this port externally
      targetPort: 8080  # Port that the backend container is listening on
      nodePort: 30002   # Specify a node port (range: 30000-32767)
