k8/frontend-deployment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 1  # Number of frontend replicas
  selector:
    matchLabels:
      app: frontend  # This should match the label on the frontend pods
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: frontend-image:latest  
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80   # Port the frontend container will expose

---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80        
      targetPort: 80
