k8/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 1  # Number of frontend replicas
  selector:
    matchLabels:
      app: frontend  # This should match the label on the frontend pods
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: frontend-image:latest  
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80   # Port the frontend container will expose
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: NodePort  # Change the service type to NodePort
  selector:
    app: frontend  # Match frontend pods
  ports:
    - protocol: TCP
      port: 80        # Expose this port externally
      targetPort: 80  # Port that the frontend container is listening on
      nodePort: 30001 # Optional: Specify a node port (range: 30000-32767)
